--- a/Frontend/src/css/header.css
+++ b/Frontend/src/css/header.css
@@ -1,9 +1,11 @@
 .header {
   background-color: #4a4a4a;
   padding: 0;
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 100;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
   height: 100px;
   display: flex;
   align-items: center;
